// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cell component check > Cell renders correct 1`] = `
<DocumentFragment>
  <div
    class="css-1l2qare"
    data-testid="1,1"
    role="cell"
  >
    0
  </div>
</DocumentFragment>
`;

exports[`Cell component check > Cell renders correct 2`] = `
<DocumentFragment>
  <div
    class="css-y5m8ng"
    data-testid="1,1"
    role="cell"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Cell component check > Cell renders correct 3`] = `
<DocumentFragment>
  <div
    class="css-13kl6wr"
    data-testid="1,1"
    role="cell"
  >
    2
  </div>
</DocumentFragment>
`;

exports[`Cell component check > Cell renders correct 4`] = `
<DocumentFragment>
  <div
    class="css-1ejwm48"
    data-testid="1,1"
    role="cell"
  >
    3
  </div>
</DocumentFragment>
`;

exports[`Cell component check > Cell renders correct 5`] = `
<DocumentFragment>
  <div
    class="css-bqz2uz"
    data-testid="1,1"
    role="cell"
  >
    4
  </div>
</DocumentFragment>
`;

exports[`Cell component check > Cell renders correct 6`] = `
<DocumentFragment>
  <div
    class="css-1njursc"
    data-testid="1,1"
    role="cell"
  >
    5
  </div>
</DocumentFragment>
`;

exports[`Cell component check > Cell renders correct 7`] = `
<DocumentFragment>
  <div
    class="css-1sbs8zf"
    data-testid="1,1"
    role="cell"
  >
    6
  </div>
</DocumentFragment>
`;

exports[`Cell component check > Cell renders correct 8`] = `
<DocumentFragment>
  <div
    class="css-10ze38e"
    data-testid="1,1"
    role="cell"
  >
    7
  </div>
</DocumentFragment>
`;

exports[`Cell component check > Cell renders correct 9`] = `
<DocumentFragment>
  <div
    class="css-9s2y9s"
    data-testid="1,1"
    role="cell"
  >
    8
  </div>
</DocumentFragment>
`;

exports[`Cell component check > Cell renders correct 10`] = `
<DocumentFragment>
  <div
    class="css-12dzs03"
    data-testid="1,1"
    role="cell"
  >
    <div
      class="css-81z0jo"
      data-testid="bomb_1,1"
    />
  </div>
</DocumentFragment>
`;

exports[`Cell component check > Cell renders correct 11`] = `
<DocumentFragment>
  <div
    class="css-1tt7j02"
    data-testid="1,1"
    role="cell"
  >
    10
  </div>
</DocumentFragment>
`;

exports[`Cell component check > Cell renders correct 12`] = `
<DocumentFragment>
  <div
    class="css-1tt7j02"
    data-testid="1,1"
    role="cell"
  >
    <div
      class="css-p26beq"
      data-testid="flag_1,1"
    >
      11
    </div>
  </div>
</DocumentFragment>
`;

exports[`Cell component check > Cell renders correct 13`] = `
<DocumentFragment>
  <div
    class="css-1tt7j02"
    data-testid="1,1"
    role="cell"
  >
    <div
      class="css-15fedo1"
      data-testid="weakFlag_1,1"
    />
  </div>
</DocumentFragment>
`;

exports[`Cell component check > Closed Frame renders correct 1`] = `
<DocumentFragment>
  <div
    class="css-8jxsla"
  />
</DocumentFragment>
`;

exports[`Cell component check > Closed Frame renders correct 2`] = `
<DocumentFragment>
  <div
    class="css-8jxsla"
  />
</DocumentFragment>
`;

exports[`Cell component check > Closed Frame renders correct 3`] = `
<DocumentFragment>
  <div
    class="css-8jxsla"
  />
</DocumentFragment>
`;

exports[`Cell component check > Closed Frame renders correct 4`] = `
<DocumentFragment>
  <div
    class="css-8jxsla"
  />
</DocumentFragment>
`;

exports[`Cell component check > Closed Frame renders correct 5`] = `
<DocumentFragment>
  <div
    class="css-8jxsla"
  />
</DocumentFragment>
`;

exports[`Cell component check > Closed Frame renders correct 6`] = `
<DocumentFragment>
  <div
    class="css-8jxsla"
  />
</DocumentFragment>
`;

exports[`Cell component check > Closed Frame renders correct 7`] = `
<DocumentFragment>
  <div
    class="css-8jxsla"
  />
</DocumentFragment>
`;

exports[`Cell component check > Closed Frame renders correct 8`] = `
<DocumentFragment>
  <div
    class="css-8jxsla"
  />
</DocumentFragment>
`;

exports[`Cell component check > Closed Frame renders correct 9`] = `
<DocumentFragment>
  <div
    class="css-8jxsla"
  />
</DocumentFragment>
`;

exports[`Cell component check > Closed Frame renders correct 10`] = `
<DocumentFragment>
  <div
    class="css-8jxsla"
  />
</DocumentFragment>
`;

exports[`Cell component check > Closed Frame renders correct 11`] = `
<DocumentFragment>
  <div
    class="css-8jxsla"
  />
</DocumentFragment>
`;

exports[`Cell component check > Closed Frame renders correct 12`] = `
<DocumentFragment>
  <div
    class="css-8jxsla"
  />
</DocumentFragment>
`;

exports[`Cell component check > Closed Frame renders correct 13`] = `
<DocumentFragment>
  <div
    class="css-8jxsla"
  />
</DocumentFragment>
`;
